# pyclaw

./: .gitignore  LICENSE  README.md  generate_random_excel.py  pyproject.toml
.github/workflows/: main.yml
pyclaw/: __init__.py
pyclaw/agent/: __init__.py  agent.py  antigravity.py  config_tool.py  cron.py  desktop.py  heartbeat.py  identity.py  identity_tools.py  providers.py  search.py  session.py  tools.py
pyclaw/auth/: __init__.py  google_auth.py
pyclaw/cli/: __init__.py  agent.py  config_cmd.py  gateway_cmd.py  models_cmd.py  onboard.py  skills_cmd.py
pyclaw/config/: __init__.py  config.py  defaults.py  models.py
pyclaw/gateway/: __init__.py  _runner.py  manager.py  telegram.py
pyclaw/skills/: __init__.py  loader.py
pyclaw/skills/defaults/file_management/: SKILL.md
pyclaw/skills/defaults/shell/: SKILL.md
pyclaw/skills/defaults/system/: SKILL.md
pyclaw/skills/defaults/tmux/: SKILL.md
